<resources>
    <string name="app_name">微观视界</string>

    <string name="home">主页</string>
    <string name="part">分类</string>
    <string name="mine">我的</string>
    <string name="recommend">大家都在看</string>
    <string name="more">查看更多</string>
    <string name="test_name">此名称用来测试此名称用来测试</string>
    <string name="foryou">为你推荐</string>
    <string name="home_search">点我搜索，尽量别写错别字，不然搜不到哦～</string>
    <string name="footer_release">释放立即加载</string>
    <string name="network_hint">当前网络不可用，请检查你的网络设置。</string>
    <string name="query_hint">请输入关键字</string>
    <string name="history">搜索历史</string>
    <string name="exit">再次点击返回键退出应用</string>
    <string name="delete_history_all">确定删除全部历史记录?</string>
    <string name="warring">警告</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="movie1">电影 ｜ </string>
    <string name="movie2">电视剧 | </string>
    <string name="movie3">综艺 | </string>
    <string name="movie4">动漫 | </string>
    <string name="movie5">纪录片 | </string>
    <string name="movie6">电影解说 | </string>
    <string name="hint_txt">当前热门搜索已隐藏</string>
    <string name="play_now">立即播放</string>
    <string name="hot_search_txt">热搜榜</string>
    <string name="movie_score">分</string>
    <string name="every_watching">大家都在看</string>
    <string name="hot_search">热门搜索</string>
    <string name="refreshSuccess">刷新成功</string>
    <string name="refreshFail">刷新失败</string>
    <string name="checkInternet">请检查网络</string>
    <string name="title_activity_movie_class_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps usersPerson quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="movie_part">影视分类</string>
    <string name="movie_hint_defaultvalue">全部/全部/全部/全部</string>
    <string name="login_regist">登录/注册</string>
    <string name="loading">离线缓存</string>
    <string name="watch_history">观看历史</string>
    <string name="zhuiju">我的追剧</string>
    <string name="shoucang">我的收藏</string>
    <string name="fenxiang">分享应用</string>
    <string name="contact">联系作者</string>
    <string name="versionInformation">版本信息</string>
    <string name="setport">设置端口</string>
    <string name="personal_center">个人中心</string>
    <string name="set">设置</string>
    <string name="title_activity_personal_information">ScrollingActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="signature_txt">快来设置属于自己的个性签名吧！</string>
    <string name="default_address">安徽省-宣城市</string>
    <string name="default_sex">男</string>
    <string name="default_birth">2000-01-01</string>
    <string name="myinfo">个人资料</string>
    <string name="edit_myinfo">编辑个人资料</string>
    <string name="input_email">填写Email，构建交际关系</string>
    <string name="head">头像</string>
    <string name="signature">签名</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="birth">生日</string>
    <string name="address">地址</string>
    <string name="email">邮箱</string>
    <string name="bg_pic">背景墙</string>
    <string name="finish">完成</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="input_u_num">请输入账号</string>
    <string name="skip">下一步</string>
    <string name="find_pwd">找回密码</string>
    <string name="input_newpwd">请输入新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="plear_type">播放源(m3u8)</string>
    <string name="plear_other">播放源(other)</string>
    <string name="same_video">相关影视</string>
    <string name="login_txt">请登录账号</string>
    <string name="gologin">前往登录</string>
    <string name="administration">管理</string>
    <string name="no_watchhistory">暂无观看记录哦，赶紧去看吧 ~</string>
    <string name="shoucang_text">暂无收藏记录，赶紧去收藏吧～</string>
    <string name="zhuiju_text">暂无追剧记录，赶紧去添加追剧吧～</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <string name="marquee_text">本站视频采集自网络，水印广告请勿相信，如果遇到视频无法播放请更换播放地址</string>
    <string name="number_loginout">开始注销前请确认一下内容</string>
    <string name="account_info">1.账号信息</string>
    <string name="account_info_txt">账号相关信息将被清零，个人资料和历史信息(包括头像、昵称)将被清空。</string>
    <string name="loginout_hint">2.账号注销后无法找回</string>
    <string name="logout_hint">账号注销后，即使你使用相同的账号再次注册，依旧无法找回之前账号信息，会以新的用户身份进行登录。</string>
    <string name="agree_text">我已阅读并同意</string>
    <string name="logout_title">注销账号</string>
    <string name="qq">腾讯QQ</string>
    <string name="wechat">微信</string>
    <string name="notfind_movie">没找到相关电影哦~</string>


</resources>