<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ForgotPassword3_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightFromTopOfScreen" />

    <include layout="@layout/m_title" />

    <EditText
        android:id="@+id/et_newPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:hint="@string/input_newpwd"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/et_confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:hint="@string/confirm_pwd"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        >
        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_button_margin"
            android:background="@drawable/edit_button_shape"
            android:text="@string/finish"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>