<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activity.AccountLogoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightFromTopOfScreen" />

    <include layout="@layout/m_title" />
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:srlEnableLoadMore="false"
        app:srlEnableOverScrollBounce="true"
        app:srlEnableOverScrollDrag="true"
        app:srlEnableRefresh="false"
        android:layout_marginBottom="40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_loginout"
                android:textColor="@color/hint_txt"
                android:textSize="16sp"
                android:padding="@dimen/title_margin"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_info"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="@dimen/title_margin"
                android:layout_marginTop="@dimen/title_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_info_txt"
                android:padding="@dimen/title_margin"
                />

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-账号:"
                android:textColor="@color/black"
                android:padding="@dimen/title_margin"
                />
            <TextView
                android:id="@+id/account_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-昵称:"
                android:textColor="@color/black"
                android:padding="@dimen/title_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginout_hint"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="@dimen/title_margin"
                android:layout_marginTop="@dimen/title_margin"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout_hint"
                android:padding="@dimen/title_margin"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical"
                >
                <Button
                    android:id="@+id/btn_skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edit_button_margin"
                    android:background="@drawable/edit_button_shape"
                    android:text="注销账号"
                    android:textColor="@color/white"
                    />

                <CheckBox
                    android:id="@+id/agree_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_text"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>