<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Activity.Modify_PWDActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightFromTopOfScreen" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <include layout="@layout/m_title" />

            <EditText
                android:id="@+id/old_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入旧密码"
                android:layout_margin="@dimen/title_margin"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/new_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_newpwd"
                android:layout_margin="@dimen/title_margin"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pwd"
                android:layout_margin="@dimen/title_margin"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="忘记密码?"
                android:layout_gravity="right"
                android:layout_margin="@dimen/title_margin"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal"
                >
                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edit_button_margin"
                    android:background="@drawable/edit_button_shape"
                    android:text="@string/finish"
                    android:textColor="@color/white"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>
