<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/recycler_bg"
    android:id="@+id/play_movie"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_height"
        android:background="@color/recycler_bg"
        android:layout_margin="@dimen/title_margin"
        android:orientation="horizontal">

        <com.example.simpletv.Tools.RoundImageView
            android:id="@+id/result_pic"
            android:layout_width="@dimen/movie_width"
            android:layout_height="match_parent"
            android:background="@drawable/picture_loading"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_height"
            android:layout_marginLeft="@dimen/title_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_name"
                android:textSize="@dimen/result_movie_textsize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/clarity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/title_margin"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font"
                        android:textSize="@dimen/result_movie_textsize"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_score"
                        android:textSize="@dimen/score_size"
                        android:layout_marginLeft="@dimen/margin"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">
                    <Button
                        android:id="@+id/btn_play"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/play_movie"
                        android:text="@string/play_now"
                        android:textColor="@color/white"
                        android:textSize="@dimen/movie_name_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
